--- a/css/main.css
+++ b/css/main.css
@@ -27,14 +27,15 @@ h1 {
 p {
     background-image:url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRgKGv-xSFTE7th1n_Y5zmHUhcTplYyiV0NhqFWR9MomsL8t1lx);
     background-repeat:no-repeat;
-    font-size:3em;
-    line-height: 2.5em;
+    background-size: cover;
+    font-size:1.7em;
+    line-height: 1.6em;
     color: #333;
 }
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: 2.5em;
-    background-color:brown;
+  
 }
 
 ul.posts { 
@@ -49,4 +50,5 @@ ul.posts li {
 nav {
     background-image:url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcS4Hy69Uu1iO9QSYpZVWjMTcfwaGkpI7gsYN9awnthS6bwpRSDy);
     background-repeat:no-repeat;
+    background-size: cover;
 }
