--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/history">History</a></li>
         		<li><a href="/facts">Facts</a></li>
-			<li><a href="shweta-yadav.github.io/blog">Blog</a></li>
+			<li><a href="http://shweta-yadav.github.io/blog/">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
