--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	<body style="color:white;">
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/history">History</a></li>
         		<li><a href="/facts">Facts</a></li>
