--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<nav>
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html">About</a></li>
         		<li><a href="/history">History</a></li>
         		<li><a href="/facts">Facts</a></li>
-			<li><a href="http://shweta-yadav.github.io/_blog/chocoholic.html">Blog</a></li>
+			<li><a href="https://shweta-yadav.github.io/blog/chocoholic.html"> Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
