--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html">About</a></li>
         		<li><a href="/history">History</a></li>
         		<li><a href="/facts">Facts</a></li>
-			<li><a href="https://shweta-yadav.github.io/blog/chocoholic.html"> Blog </a></li>
+			<li><a href="https://shweta-yadav.github.io/_blog/chocoholic.html"> Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
