--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
-	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html">About</a></li>
+	        	<li><a href="/about">About</a></li>
         		<li><a href="/history">History</a></li>
         		<li><a href="/facts">Facts</a></li>
 			<li><a href="/blog"> Blog </a></li>
