--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,10 @@ ul.posts li {
 }
 
 nav {
-    height:200px;
+    height:100px;
     width:100%;
+    font-size:2em;
+    text-align:center;
     background-image:url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcS4Hy69Uu1iO9QSYpZVWjMTcfwaGkpI7gsYN9awnthS6bwpRSDy);
     background-repeat:no-repeat;
     background-size: cover;
