--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     
     background-image:url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRgKGv-xSFTE7th1n_Y5zmHUhcTplYyiV0NhqFWR9MomsL8t1lx);
     background-repeat:no-repeat;
+    width:100%;
     background-size: cover;
     margin: 60px auto;
     width: 70%;
