--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
 	        	<li><a href="/about/chocoholic.html">About</a></li>
-        		<li><a href="/history">History</a></li>
-        		<li><a href="/facts">Facts</a></li>
-			<li><a href="/blog"> Blog </a></li>
+        		<li><a href="/history.html">History</a></li>
+        		<li><a href="/facts.html">Facts</a></li>
+			<li><a href="/blog.html"> Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
