--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<nav>
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
-	        	<li><a href="/about/chocoholic.html">About</a></li>
-        		<li><a href="/history.html">History</a></li>
+	        	<li><a href="/_about/chocoholic.html">About</a></li>
+        		<li><a href="/history/chocoholic.html">History</a></li>
         		<li><a href="/facts.html">Facts</a></li>
-			<li><a href="/blog.html"> Blog </a></li>
+			<li><a href="/_blog/chocoholic.html"> Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
