--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<nav>
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
-	        	<li><a href="https://shweta-yadav.github.io/_about/chocoholic.html" target="_blank">About</a></li>
-        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" target="_blank">History</a></li>
-        		<li><a href="https://shweta-yadav.github.io/facts.html" target="_blank">Facts</a></li>
-			<li><a href="https://shweta-yadav.github.io/_blog/chocoholic.html" target="_blank" > Blog </a></li>
+	        	<li><a href="https://shweta-yadav.github.io/_about/chocoholic.html" target="_self">About</a></li>
+        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" target="_self">History</a></li>
+        		<li><a href="https://shweta-yadav.github.io/facts.html" target="_self">Facts</a></li>
+			<li><a href="https://shweta-yadav.github.io/_blog/chocoholic.html" target="_self" > Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
