--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<nav>
     		<ul>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
-	        	<li><a href="https://shweta-yadav.github.io/_about/chocoholic.html" target="_blank|_self|_parent|_top|">About</a></li>
-        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" target="_blank|_self|_parent|_top|">History</a></li>
-        		<li><a href="https://shweta-yadav.github.io/facts.html" target="_blank|_self|_parent|_top|">Facts</a></li>
-			<li><a href="https://shweta-yadav.github.io/_blog/chocoholic.html" target="_blank|_self|_parent|_top|" > Blog </a></li>
+	        	<li><a href="https://shweta-yadav.github.io/_about/chocoholic.html" >About</a></li>
+        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" >History</a></li>
+        		<li><a href="https://shweta-yadav.github.io/facts.html">Facts</a></li>
+			<li><a href="https://shweta-yadav.github.io/_blog/chocoholic.html" > Blog </a></li>
     		</ul>
 		</nav>
 		<div class="container">
