--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
 	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html" >About</a></li>
         		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" >History</a></li>
-        		<li><a href="https://shweta-yadav.github.io/facts.html">Facts</a></li>
+        		<li><a href="https://shweta-yadav.github.io/facts/chocoholic.html">Facts</a></li>
 			<li><a href="https://shweta-yadav.github.io/blog/chocoholic.html" > Blog </a></li>
     		</ul>
 		</nav>
