--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
+    position: fixed;
     list-style: none;
     font-weight: bold;
 }
