--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     position: fixed;
+    overflow: hidden;
+     top: 0;
+     width: 100%;
+    margin: 0px;
     list-style: none;
     font-weight: bold;
 }
