--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 		<title>{{page.title}}</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-	<body style="color:white;">
+	<body style="text-size:2em;">
 		<nav>
     		<ul><br/>
         		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
